--- a/app/src/main/res/layout/activity_game4_screen.xml
+++ b/app/src/main/res/layout/activity_game4_screen.xml
@@ -132,7 +132,7 @@
         android:layout_width="235dp"
         android:layout_height="35dp"
         android:fontFamily="@font/stick"
-        android:text="Player Score: "
+        android:text="Player Score: 0"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
